--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -5,6 +5,17 @@ on: pull_request
 jobs:
   lint-test:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        kubernetes_version:
+          - "kindest/node:v1.22.1"
+          - "kindest/node:v1.21.2"
+          - "kindest/node:v1.20.7"
+          - "kindest/node:v1.19.11"
+          - "kindest/node:v1.18.19"
+      fail-fast: false
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -42,6 +53,8 @@ jobs:
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
         if: steps.list-changed.outputs.changed == 'true'
+        with:
+          node_image: ${{ matrix.kubernetes_version }}
 
       - name: Run chart-testing (install)
         run: ct install --config ct.yaml
