--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -47,6 +47,12 @@ jobs:
             echo "::set-output name=changed::true"
           fi
 
+      - name: install helm unittests
+        if: steps.list-changed.outputs.changed == 'true'
+        run: |
+          helm env
+          helm plugin install https://github.com/quintush/helm-unittest --version 0.2.8
+
       - name: Run chart-testing (lint)
         run: ct lint --config ct.yaml
 
