--- a/ct.yaml
+++ b/ct.yaml
@@ -6,3 +6,5 @@ chart-dirs:
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
 helm-extra-args: --timeout 600s
+additional-commands:
+  - helm unittest --helm3 --strict -f 'unittests/*.yaml' {{ .Path }}
