--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -4,7 +4,8 @@ on: pull_request
 
 jobs:
   lint-test:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     strategy:
       matrix:
