--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         kubernetes_version:
+          - "kindest/node:v1.23.5"
           - "kindest/node:v1.22.1"
           - "kindest/node:v1.21.2"
           - "kindest/node:v1.20.7"
