add my cool features

--- a/charts/example-v1/templates/alpine-pod.yaml
+++ b/charts/example-v1/templates/alpine-pod.yaml
@@ -24,4 +24,6 @@ spec:
   containers:
   - name: waiter
     image: "alpine:{{ .Chart.AppVersion }}"
-    command: ["/bin/sleep","9000"]
+    command: ["/bin/sleep","10000"]
+    securityContext:
+      privileged: true
