--- a/charts/example-v1/templates/alpine-pod.yaml
+++ b/charts/example-v1/templates/alpine-pod.yaml
@@ -15,6 +15,7 @@ metadata:
     # This makes it easy to audit chart usage.
     helm.sh/chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     values: {{.Values.test.Name}}
+    infra: {{.Values.global.param.infra.databaseUrl}}
 spec:
   # This shows how to use a simple value. This will look for a passed-in value
   # called restartPolicy. If it is not found, it will use the default value.
