--- a/charts/example-v1/values.yaml
+++ b/charts/example-v1/values.yaml
@@ -1,3 +1,8 @@
 Name: my-alpine
 test:
-    Name: initial-values
+  Name: initial-values
+
+global:
+  param:
+    infra:
+      databaseUrl: default-db-url
