--- a/ct.yaml
+++ b/ct.yaml
@@ -5,6 +5,7 @@ chart-dirs:
   - charts
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
+  - pubsubplus=https://solaceproducts.github.io/pubsubplus-kubernetes-helm-quickstart/helm-charts
 helm-extra-args: --timeout 600s
 additional-commands:
   - helm unittest --strict --color --file 'unittests/*.yaml' {{ .Path }}
