--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -11,10 +11,10 @@ jobs:
     strategy:
       matrix:
         kubernetes_version:
-          - "kindest/node:v1.25.11"
+#          - "kindest/node:v1.25.11"
           - "kindest/node:v1.24.15"
-          - "kindest/node:v1.23.5"
-          - "kindest/node:v1.22.1"
+          # - "kindest/node:v1.23.5"
+          # - "kindest/node:v1.22.1"
       fail-fast: false
 
     steps:
