--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -15,4 +15,4 @@ jobs:
 
       - name: Generate Manifests
         run: |
-          .github/workflows/utils/generate-manifests.py
+          .github/workflows/utils/generate-manifests.py deployment/hello-world-app/deploymentTargets/
