--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -8,11 +8,16 @@ jobs:
   Deploy_To_Dev:
       runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        deployment_target:
+          - "hello-world-app"
+
       environment: dev            
       steps:
       - name: Checkout Source
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v4
 
       - name: Generate Manifests
         run: |
-          .github/workflows/utils/generate-manifests.py deployment/hello-world-app/deploymentTargets/
+          .github/workflows/utils/generate-manifests.py deploymentTargets/${{ matrix.deployment_target }}
