--- a/deploymentTargets/hello-world-app/functional-test.yaml
+++ b/deploymentTargets/hello-world-app/functional-test.yaml
@@ -2,7 +2,7 @@
 name: functional-test
 
 # Workload app
-workload: hello-world-app
+workloadName: hello-world-app
 
 # environment 
 environment: dev
