--- a/deploymentTargets/hello-world-app/uat-test.yaml
+++ b/deploymentTargets/hello-world-app/uat-test.yaml
@@ -1,5 +1,5 @@
 name: uat-test
-workload: hello-world-app
+workloadName: hello-world-app
 environment: qa
 appValueFiles: 
 - deployment/hello-world-app/values-qa-uat.yaml
