--- a/deploymentTargets/hello-world-app/blue.yaml
+++ b/deploymentTargets/hello-world-app/blue.yaml
@@ -1,5 +1,5 @@
 name: blue
-workload: hello-world-app
+workloadName: hello-world-app
 environment: prod
 appValueFiles: 
 - deployment/hello-world-app/values-prod-blue.yaml
