--- a/deploymentTargets/hello-world-app/green.yaml
+++ b/deploymentTargets/hello-world-app/green.yaml
@@ -1,5 +1,5 @@
 name: green
-workload: hello-world-app
+workloadName: hello-world-app
 environment: prod
 appValueFiles: 
 - deployment/hello-world-app/values-prod-green.yaml
