add Generated Helm manifests

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,4 +22,5 @@ jobs:
         run: |
           .github/workflows/utils/generate-manifests.py \
             ${{ github.workspace }}/deploymentTargets/${{ matrix.deployment_target }} \
-            ${{ github.workspace }}/charts/${{ matrix.deployment_target }}
+            ${{ github.workspace }}/charts/${{ matrix.deployment_target }} \
+            ${{ github.workspace }}/generated_manifests
