--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        deployment_target:
+        chart_name:
           - "hello-world-app"
       fail-fast: false
 
@@ -21,6 +21,6 @@ jobs:
       - name: Generate Manifests
         run: |
           .github/workflows/utils/generate-manifests.py \
-            ${{ github.workspace }}/deploymentTargets/${{ matrix.deployment_target }} \
-            ${{ github.workspace }}/charts/${{ matrix.deployment_target }} \
+            ${{ github.workspace }}/deployment/${{ matrix.chart_name }}/deploymentTargets/ \
+            ${{ github.workspace }}/charts/${{ matrix.chart_name/ }} \
             ${{ github.workspace }}/generated_manifests
