--- a/deployment/hello-world-app/deploymentTargets/blue.yaml
+++ b/deployment/hello-world-app/deploymentTargets/blue.yaml
@@ -1,16 +1,15 @@
 # Name of the Deployment target
-deploymentTargetName: functional-test
+deploymentTargetName: blue
 
-# Workload app name
-workloadAppName: hello-world-app
+# Application workload chart release name
+chartReleaseName: hello-world-app
 
-# environment 
-environment: dev
+# Environment
+environment: prod
 
 # Helm application value files
 appValueFiles: 
-- deploymentTargets/hello-world-app/helm-values/values-dev.yaml
-- deploymentTargets/hello-world-app/helm-values/values-uat.yaml
+- deployment/hello-world-app/helm-values/values-prod-blue.yaml
 
 # Helm infrastructure value files
 # The higher numbers - the higher precedence and overrides
@@ -23,4 +22,4 @@ infraValueFiles:
 manifests:
   repo: kalypso-app-gitops.git
   branch: main
-  path: ./functional-test
+  path: ./blue
