--- a/deployment/hello-world-app/deploymentTargets/functional-test.yaml
+++ b/deployment/hello-world-app/deploymentTargets/functional-test.yaml
@@ -2,7 +2,7 @@
 deploymentTargetName: functional-test
 
 # Application workload chart release name
-chartReleaseName: hello-world-app
+chartReleaseName: my-hello-world-app
 
 # Environment 
 environment: dev
