--- a/deployment/hello-world-app/deploymentTargets/green.yaml
+++ b/deployment/hello-world-app/deploymentTargets/green.yaml
@@ -2,7 +2,7 @@
 deploymentTargetName: green
 
 # Application workload chart release name
-chartReleaseName: hello-world-app
+chartReleaseName: my-hello-world-app
 
 # Environment
 environment: prod
