--- a/infravalues/default.yaml
+++ b/infravalues/default.yaml
@@ -2,7 +2,7 @@ global:
   param:
     infra:
       SOME_INFRA_ENVIRONMENT_VARIABLE: "true"
-      DATABASE_URL: mysql://west:8806/mysql3
+      DATABASE_URL: mysql://west:8806/mysql3-default
     ars:
       SOME_ARS_ENVIRONMENT_VARIABLE: "true"
     solace:
