--- a/infravalues/01-environment/prod.yaml
+++ b/infravalues/01-environment/prod.yaml
@@ -2,7 +2,7 @@ global:
   param:
     infra:
       SOME_INFRA_ENVIRONMENT_VARIABLE: "true"
-      DATABASE_URL: mysql://west:8806/mysql4
+      DATABASE_URL: mysql://west:8806/mysql4-prod
     ars:
       SOME_ARS_ENVIRONMENT_VARIABLE: "true"
     solace:
