--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,9 +5,8 @@ on:
 
 jobs:
 
-  Deploy_To_Dev:
+  Build_Generate:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         chart_name:
@@ -26,6 +25,10 @@ jobs:
             ${{ github.workspace }}/charts/${{ matrix.chart_name }} \
             ${{ github.workspace }}/generated_manifests
 
+  Deploy_To_Dev:
+    runs-on: ubuntu-latest
+    needs: Build_Push_Image
+    steps:
       - name: Create PR to GitOps repo
         run: |        
           .github/workflows/utils/create-pr.sh \
