--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,7 +25,7 @@ jobs:
             ${{ github.workspace }}/charts/${{ matrix.chart_name }} \
             ${{ github.workspace }}/generated_manifests
 
-      - name: See Artifact
+      - name: See Artifact lists
         run: |
           find generated_manifests/ -print
 
@@ -65,7 +65,7 @@ jobs:
 
   Deploy_To_Qa:
     runs-on: ubuntu-latest
-    needs: Build_Generate
+    needs: [Build_Generate,Deploy_To_Dev]
 
     steps:
       - name: Checkout Source
@@ -93,7 +93,7 @@ jobs:
 
   Deploy_To_Prod:
     runs-on: ubuntu-latest
-    needs: Build_Generate
+    needs: [Build_Generate,Deploy_To_Qa]
 
     steps:
       - name: Checkout Source
