--- a/charts/hello-world-app/templates/alpine-pod.yaml
+++ b/charts/hello-world-app/templates/alpine-pod.yaml
@@ -15,7 +15,6 @@ metadata:
     # This makes it easy to audit chart usage.
     helm.sh/chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     values: {{.Values.test.Name}}
-    infra: {{.Values.global.param.infra.databaseUrl}}
 spec:
   # This shows how to use a simple value. This will look for a passed-in value
   # called restartPolicy. If it is not found, it will use the default value.
@@ -25,6 +24,9 @@ spec:
   containers:
   - name: waiter
     image: "alpine:{{ .Chart.AppVersion }}"
+    env:
+    - name: DATABASE_URL
+      value: {{.Values.global.param.infra.databaseUrl}}
     command: ["/bin/sleep","60000"]
     securityContext:
       privileged: true
