--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Generate Manifests
         run: |
           .github/workflows/utils/generate-manifests.py \
-            ${{ github.workspace }}/deploymentTargets/ \
+            ${{ github.workspace }}/deployment/deploymentTargets \
             ${{ github.workspace }}/generated_manifests
 
       - name: See generated manifests list
