--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Generate Manifests
         run: |
-          .github/workflows/utils/generate-manifests.py \
+          .github/workflows/utils/generate-manifests.py ${{ github.workspace }} \
             ${{ github.workspace }}/deployment/deploymentTargets \
             ${{ github.workspace }}/generated_manifests
 
